# StackBuilder-Crawler

./: .coverage  Dockerfile  Makefile  README.md  alembic.ini  main.py  pyproject.toml
adr/: adr.md
src/adapters/: __init__.py  crawler.py  db_logger.py  file_logger.py  logger.py
src/controllers/: __init__.py  cli.py
src/domain/dtos/: get_entries.py
src/domain/entities/: __init__.py  entry.py  filter.py  log.py  order.py
src/domain/repositories/: __init__.py  entry_repository.py  log_repository.py
src/usecases/: __init__.py  get_entries_usecase.py  get_entry_usecase.py
tests/unit/adapters/: hn_fixture.html  test_crawler.py  test_db_logger.py  test_file_logger.py  test_logger.py
tests/unit/controllers/: test_cli.py
tests/unit/entities/: test_entry.py  test_filter.py  test_log.py  test_order.py
tests/unit/usecases/: test_get_entries_usecase.py
